2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00783] hsaka@mth.biglobe.ne.jp (Hironori SAKAMOTO)
	  add display_lineinfo option
	* display.c (displayBuffer): check displayLineInfo
	* fm.h (displayLineInfo): added
	* rc.c (CMT_DISPLINEINFO): added
		(display_lineinfo): added
	* NEWS (rc: display_lineinfo): add

2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00781] "Clemens Fischer" <ino-waiting@gmx.net>
	  zope doesn't recognize implied *LWS in accept-language
	* rc.c (sync_with_option): remove optional LWS

2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00780] "Carlo E. Prelz" <fluido@fluido.as>
	  always print on screen the relative position
	* display.c (displayBuffer): relative position

2002-10-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* 0.3.2 release candidate 1
	* version.c.in: update

2002-10-26  Gary Johnson <garyjohn@spk.agilent.com>

	* [w3m-dev-en 00777] patch to fix w3m-0.3.1 word break problem
	* file.c (is_period_char): 
		0x203A - SINGLE RIGHT-POINTING ANGLE QUOTATION MARK
		(is_beginning_char):
		0x2018 - LEFT SINGLE QUOTATION MARK
		0x2039 - SINGLE LEFT-POINTING ANGLE QUOTATION MARK
		(is_word_char): add several chars ifndef JP_CHARSET
			add ':' and '*'

2002-10-17  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03342]
	* doc/README.img: updated
	* doc-jp/README.img: updated

2002-10-17  Daiki Ueno <ueno@unixuser.org>

	* [w3m-dev 03341] white space is needed to close an empty-element tag
	* parsetagx.c (parse_tag): extract tagname until '/'

2002-10-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03339] Re: Debian Bug#164098 w3m: <sup> is not properly supported
	* file.c (HTMLtagproc1): HTML_SUP, HTML_N_SUP, HTML_SUB, HTML_N_SUB
	* html.c (TagMAP): sup, /sup, sub, /sub
	* html.c (HTML_SUP): added
		(HTML_N_SUP): added
		(HTML_SUB): added
		(HTML_N_SUB): added
	* table.c (feed_table_tag): HTML_SUP, HTML_N_SUP, HTML_SUB, HTML_N_SUB
	* tagtable.tab (sup): added
		(/sup): added
		(sub): added